--- a/ac/config/docs.cfg
+++ b/ac/config/docs.cfg
@@ -98,6 +98,9 @@ docident [demoplaybackspeed] [Sets the playback speed for a demo.];
 docargument [P] [the playback speed] [min 10/max 1000/default 100];
 docremark [To see the effect, the variable must be set before playing a demo.];
 
+docident [demoplayer] [Shifts the camera to an other demo player];
+docargument [N] [the shift direction] [1 (forwards), -1 (backwards)] [0];
+
 docident [demotracking] [Specifies if particles should be emitted on demo players position.];
 docargument [B] [sets the demo tracking state] [1 (on), 0 (off) min 0/max 1/default 0];
 docremark [When demotracking is on (B = 1), the camera will create a red particle every frame where it moves, creating a trail. This can be used to inspect someone's movement in a game. It will only show the last N particles according to the maxparticles variable, which you may want to increase to 10000. The particles will remain even after you stop the demo, so you can use edit mode to look at it from all angles.];
@@ -154,11 +157,17 @@ docargument [N] [the weapon number] [0 (knife), 1 (pistol), 2 (shotgun), 3 (sub)
 
 docsection [General]
 
+docident [addserver] [Adds a server to the list of server to query in the server list menu.];
+docargument [S] [the name of the server (cn/ip)] [] [0];
+
 docident [alias] [Binds a name to commands.];
 docargument [N] [the name of the alias] [string, must not contain '$'] [0];
 docargument [A] [the commands] [string] [0];
 docremark [It is possible to re-bind an alias, even during its evaluation.];
 docremark [Example: alias myalias [ echo "hello world"; alias myalias [ echo "I already said hello" ] ]];
+
+docident [animationinterpolationtime] [Sets the time available for interpolation between model animations.];
+docargument [N] [the amount of milliseconds for the interpolation] [min 0/max 1000/default 100];
 
 docident [attack] [Fires the current weapon.];
 docremark [default: left mouse button];
@@ -166,13 +175,35 @@ docremark [default: left mouse button];
 docident [autoreload] [Indicates if the weapons should be reloaded automatically.];
 docargument [B] [the autoreload state] [on (1), off (0) min 0/max 1/default 1];
 
+docident [autoteam] [Sets the automated team assignement.];
+docargument [B] [enables or disables auto team] [1 (on), 0 (off)] [0];
+docremark [Requires master or admin state.];
+
 docident [backward] [Moves the player backward.];
 docremark [default keys: S and Down Arrow];
+
+docident [ban] [Bans a specified player from the server.];
+docargument [N] [the player to ban] [client number] [0];
+docremark [Requires admin state. The ban duration is fixed to 20 minutes.];
 
 docident [bind] [Binds a key to a command.];
 docargument [K] [the key to bind] [string] [0];
 docargument [A] [the command] [string, usually an alias] [0];
 docremark [To find out what key names and their default bindings are, look at config/keymap.cfg, then add bind commands to your autoexec.cfg.];
+
+docident [chmenumdl] [Changes the menu model of a specified menu.];
+docargument [N] [the name of the menu] [] [0];
+docargument [M] [the (new) model] [] [0];
+docargument [A] [the animation to play] [] [0];
+docargument [R] [the rotation speed] [] [0];
+docargument [S] [the scale] [] [0];
+
+docident [clearminimap] [Recreates the minimap for the current map.];
+
+docident [clearsecuremaps] [Clears the list of secured maps.];
+
+docident [connected] [Indicates if a connection to a server exists.];
+docargument [B] [the connection state] [1 (connected), 0 (disconnected) min 0/max 1/default 0];
 
 docident [conskip] [Allows to browse through the console history by offsetting the console output.];
 docargument [N] [the offset] [] [0];
@@ -187,22 +218,26 @@ docident [crosshairsize] [Sets the size of your crosshair.];
 docargument [N] [the crosshair size] [min 0/max 50/default 15];
 docremark [The crosshair is turned off entirely if the size is set to 0.];
 
-docident [docargument] [Adds a new argument documentation to an identifier.];
+docident [docargument] [Adds a new argument documentation to the last added identifier.];
 docargument [T] [the token] [] [0];
 docargument [D] [the description] [] [0];
 docargument [V] [the value notes] [] [0];
 docargument [I] [flags this argument as variable-length] [1 (true), 0 (false)] [0];
-docremark [An argument represents either a command argument or a variable value. The new argument is added to the last added identifier documentation.];
+docremark [An argument represents either a command argument or a variable value.];
 docremark [The last argument of an identifier can be flagged as variable-length to indicate that it represents an unknown number of arguments.];
+
+docident [docexample] [Adds an example to the last added identifier.];
+docargument [C] [the example code] [] [0];
+docargument [E] [the explanation] [] [0];
 
 docident [docfind] [Searches the ingame docs for identifier documentations matching the specified search string.];
 docargument [S] [the search string] [] [0];
 docremark [The name, description and remarks are included in the search.];
 
-docident [docident] [Adds a new identifier documentation to a section.];
+docident [docident] [Adds a new identifier documentation to the last added section.];
 docargument [N] [name of the identifier] [] [0];
 docargument [D] [the description] [] [0];
-docremark [An identifier represents a command or variable. The new identifier documentation is assigned to the last added documentation section.];
+docremark [An identifier represents a command or variable. The new identifier];
 docremark [The name may countain spaces to create a "multipart" identifier documentation that can be used to describe a complex argument as a single pseudo identifier, look at the examples.];
 docexample [docident fov "Sets the field of view."] [];
 docexample [docident "newent light" "Adds a new light entitiy."] [];
@@ -216,9 +251,8 @@ docargument [I] [the identifier to refer to] [] [0];
 docargument [U] [the URL to refer to] [] [0];
 docremark [The new reference is added to the last added identifier documentation.];
 
-docident [docremark] [Adds a new documentation remark to an identifier.];
+docident [docremark] [Adds a new documentation remark to the last added identifier.];
 docargument [S] [the remark] [] [0];
-docremark [The new remark is added to the last added identifier documentation.];
 
 docident [docsection] [Adds a new section to the ingame documentation.];
 docargument [S] [the section name] [] [0];
@@ -275,6 +309,10 @@ docargument [N] [the name for the key] [] [0];
 docargument [A] [the default action] [] [0];
 docremark [You should never have to use this command manually, use "bind" instead.];
 
+docident [kick] [Kicks a specified player from the server.];
+docargument [N] [the player to kick] [client number] [0];
+docremark [Requires master or admin state.];
+
 docident [left] [Moves the player left.];
 docremark [default keys: A and Left Arrow];
 
@@ -292,6 +330,10 @@ docremark [TODO: multiplayer voting];
 docremark [A map given as "blah" refers to "packages/base/blah.cgz", "mypackage/blah" refers to "packages/mypackage/blah.cgz". At every map load, "config/default_map_settings.cfg" is loaded which sets up all texture definitions, etc. Everything defined in there can be overridden per package or per map by creating a "package.cfg" or "mapname.cfg" which contains whatever you want to do differently from the default.];
 docremark [When the map finishes it will load the next map when one is defined, otherwise reloads the current map. You can define what map follows a particular map by making an alias like (in the map script): alias nextmap_blah1 blah2 (loads "blah2" after "blah1").];
 
+docident [mastermode] [Sets the mastermode for the server.];
+docargument [N] [the master mode] [0 (open), 1 (private)] [0];
+docremark [Requires master or admin state. If the mastermode is set to 'private', no more clients can join the server. Default is 'open' that allows anyone to join the server.];
+
 docident [maxroll] [Sets the maximum value the display will roll on strafing.];
 docargument [N] [the roll value] [min 0/max 20/default 0];
 
@@ -300,8 +342,17 @@ docargument [N] [the name of the menuitem] [] [0];
 docargument [A] [the action on selection] [] [0];
 docremark [If the action argument is omitted, then it will be set to the same value as the description. Upon pressing return, the associated action will be executed. See config/menus.cfg for examples.];
 
+docident [menumdl] [Specifies a model to render while displaying the last added menu.];
+docargument [M] [the model] [] [0];
+docargument [A] [the animation to play] [] [0];
+docargument [R] [the rotation speed] [] [0];
+docargument [S] [the scale] [] [0];
+
 docident [millis] [Returns the number of milliseconds since engine start.];
 docexample [echo (millis)] [];
+
+docident [minimapres] [Sets the resolution for the minimap.];
+docargument [N] [the resoution] [min 7/max 10/default 9];
 
 docident [minmillis] [Sets the minimum number of milliseconds a frame should take.];
 docargument [N] [the number of milliseconds] [integer, 0 (off), default is 5] [0];
@@ -327,6 +378,9 @@ docident [rate] [Sets the clients maximum downstream bandwidth.];
 docargument [N] [the bytes per second] [min 0/max 25000/default 0];
 docremark [Leaving it at 0 (the default) means the server will dynamically try to do the best thing, this is recommended for players who don't have a clue what their bandwidth is (setting your rate unoptimally is worse than not setting it all). Modem players (56k) could try rate 4000 and tweak from there, dsl players can try rate 6000-10000. Note that the more players on a server, the more critical the effect of your rate. If you are tweak addicted, you can try playing with the variables throttle_decel (how quickly to start dropping packets when your connection becomes bandwidth limited) throttle_accel (how quickly to recover once bandwidth becomes available again) and throttle_interval (how quickly to reestimate the situation). Change the defaults at your own risk.];
 
+docident [removebans] [Removes all bans on the server.];
+docremark [Requires admin state.];
+
 docident [right] [Moves the player right.];
 docremark [default keys: D and Right Arrow];
 
@@ -334,9 +388,22 @@ docident [screenshot] [Takes a screenshot.];
 docremark [Screenshots are saved to "screenshots/screenshotN.bmp", where N is the number of milliseconds since the game was launched.];
 dockey [F12] [] [];
 
+docident [securemap] [Adds a map to the list of secured maps.];
+docargument [S] [the name of the map] [] [0];
+docremark [Secured maps can not be overwritten by the commands sendmap and getmap.];
+
 docident [sensitivity] [Sets the mouse sensitivity.];
 docargument [S] [the sensitivity] [integer] [0];
 docremark [With 'sensitivityscale' you can specify a number that the sensitivity is divided by.];
+
+docident [setadmin] [Claims or drops admin status.];
+docargument [B] [status] [1 (claim), 0 (drop)] [0];
+docargument [P] [password] [max. 15 characters] [0];
+docremark [Successfully claiming admin status revokes other players master or admin state automatically. Failed logins result in an auto kick. The admin is granted the right to kick, ban, remove bans, set autoteam and change the mastermode. In the scoreboard, the admin is marked red.];
+
+docident [setmaster] [Claims or drops master status.];
+docargument [B] [status] [1 (claim), 0 (drop)] [0];
+docremark [Claiming master status is only possible if no other player is already master. In the scoreboard, the master is marked green.];
 
 docident [showmenu] [Displays the specified menu.];
 docargument [N] [the name of a previously defined menu] [] [0];
