--- a/ac/config/menus.cfg
+++ b/ac/config/menus.cfg
@@ -103,8 +103,9 @@ newmenu multiplayer
 
 menuitem "Join Game"              	"showmenu server"
 menuitem "Update Servers"         	"updatefrommaster;showmenu server"
-menuitem "Vote"                   	"showmenu gamemode"
 menuitem "Disconnect"             	"disconnect"
+menuitem "Vote"                   	"showmenu gamemode"
+menuitem "Server Operator"			"showmenu [server operator]"
 
 
 newmenu gamemode
@@ -204,10 +205,13 @@ alias genbotmaps [
 
 genbotmaps "ac_complex ac_mines ac_depot ac_desert ac_desert2"
 
-newmenu master
+newmenu "server operator"
 
-menuitem "Become Master" "setmaster 1"
+menuitem "Claim Master" "setmaster 1"
 menuitem "Give Up Master" "setmaster 0"
+menuitem "Claim Admin" "saycommand /setadmin 1 myPassword"
+menuitem "Give Up Admin" "setadmin 0"
+menuitem "" ""
 menuitem "Set Mastermode" "showmenu mastermode"
 menuitem "Change Mode/Map" "showmenu gamemode"
 menuitem "Kick Player" [showmenu "kick player"]
