--- a/ac/config/menus.cfg
+++ b/ac/config/menus.cfg
@@ -36,7 +36,7 @@ alias genmapitems [
 
 newmenu maps
 
-genmapitems "ac_complex ac_mines ac_depot ac_desert ac_desert2"
+genmapitems "ac_complex ac_mines ac_depot ac_desert ac_desert2 ac_snow"
 
 newmenu maps_ctf 
 
