--- a/ac/config/defaults.cfg
+++ b/ac/config/defaults.cfg
@@ -136,4 +136,4 @@ bind KP_PLUS "conskip -1000"
 //bind lshift "grenades"
 //bind lalt "melee"
 
-
+alias timeremain [ echo time remaining: ($minutesremaining) ]
