--- a/ac/config/docs.cfg
+++ b/ac/config/docs.cfg
@@ -83,8 +83,16 @@ docsection [Gameplay]
 
 docident [connect] [Connects to a server.];
 docargument [N] [the (dns) name or ip of the server] [] [0];
-docargument [P] [the password] [] [0];
-docexample [connect 127.0.0.1 myPassword] [];
+docargument [P] [the server password] [] [0];
+docremark [If the server name ist omitted, the client will try to connect to an available server in the LAN.];
+docexample [connect 127.0.0.1 myServerPassword] [];
+
+docident [connectadmin] [Connects to a server and tries to claim admin state.];
+docargument [N] [the (dns) name or ip of the server] [] [0];
+docargument [P] [the admin password] [] [0];
+docremark [This command will connect to a server just like the command 'connect' and try to claim admin state. If the specified password is correct, the admin will be able to connect even if he is locked out by ban, private master mode or taken client slots. If successfully connected, bans assigned to the admin's host will be removed automatically. If all client slots are taken a random client will be kicked to let the admin in.];
+docremark [If the server name ist omitted, the client will try to connect to an available server in the LAN.];
+docexample [connect 127.0.0.1 myAdminPassword] [];
 
 docident [demo] [Plays a recorded demo.];
 docargument [S] [the demo name] [] [0];
@@ -184,7 +192,7 @@ docremark [default keys: S and Down Arrow];
 
 docident [ban] [Bans a specified player from the server.];
 docargument [N] [the player to ban] [client number] [0];
-docremark [Requires admin state. The ban duration is fixed to 20 minutes.];
+docremark [Requires master or admin state. The ban duration is fixed to 20 minutes.];
 
 docident [bind] [Binds a key to a command.];
 docargument [K] [the key to bind] [string] [0];
@@ -283,6 +291,10 @@ docident [fogcolour] [Sets fog and clearing colour.];
 docargument [C] [the colour] [integer, default is 0x8099B3] [0];
 docremark [This and the fog variable can be set in the map config file.];
 
+docident [forceteam] [Forces a specified player to join the enemy team.];
+docargument [N] [the player to assign to a team] [client number] [0];
+docremark [Requires master or admin state.];
+
 docident [forward] [Moves the player forward.];
 docremark [default keys: W and Up Arrow];
 
@@ -292,6 +304,10 @@ docargument [N] [the fov value] [60..120] [0];
 docident [gamma] [Sets the hardware gamma value.];
 docargument [N] [the gamma value] [min 30/max 300/default 100];
 docremark [May not work if your card/driver doesn't support it.];
+
+docident [givemaster] [Gives the master state to specified player.];
+docargument [N] [the player to become master] [client number] [0];
+docremark [Requires admin state. The admin will lose his admin state after successfully issuing this command.];
 
 docident [history] [Executes the specified command in the command line history.];
 docargument [N] [the N'th command from the history] [] [0];
@@ -379,7 +395,7 @@ docargument [N] [the bytes per second] [min 0/max 25000/default 0];
 docremark [Leaving it at 0 (the default) means the server will dynamically try to do the best thing, this is recommended for players who don't have a clue what their bandwidth is (setting your rate unoptimally is worse than not setting it all). Modem players (56k) could try rate 4000 and tweak from there, dsl players can try rate 6000-10000. Note that the more players on a server, the more critical the effect of your rate. If you are tweak addicted, you can try playing with the variables throttle_decel (how quickly to start dropping packets when your connection becomes bandwidth limited) throttle_accel (how quickly to recover once bandwidth becomes available again) and throttle_interval (how quickly to reestimate the situation). Change the defaults at your own risk.];
 
 docident [removebans] [Removes all bans on the server.];
-docremark [Requires admin state.];
+docremark [Requires master or admin state.];
 
 docident [right] [Moves the player right.];
 docremark [default keys: D and Right Arrow];
