--- a/ac/config/keymap.cfg
+++ b/ac/config/keymap.cfg
@@ -61,7 +61,7 @@ keymap 105 I "heightfield 2"
 keymap 106 J ""
 keymap 107 K "corner"
 keymap 108 L "newent light 16"
-keymap 109 M "toggleshowmap"
+keymap 109 M ""
 keymap 110 N ""
 keymap 111 O "editheight 2 -1"
 keymap 112 P "editheight 2 1"
@@ -125,7 +125,7 @@ keymap 304 LSHIFT ""
 keymap 305 RCTRL "jump"
 keymap 306 LCTRL "jump"
 keymap 307 RALT ""
-keymap 308 LALT ""
+keymap 308 LALT [ showmap 1; onrelease [ showmap 0 ] ]
 keymap 309 RMETA ""
 keymap 310 LMETA ""
 keymap 311 LSUPER ""
