--- a/ac/config/menus.cfg
+++ b/ac/config/menus.cfg
@@ -214,9 +214,11 @@ menuitem "Give Up Admin" "setadmin 0"
 menuitem "" ""
 menuitem "Set Mastermode" "showmenu mastermode"
 menuitem "Change Mode/Map" "showmenu gamemode"
+menuitem "Force Team Change" [showmenu "force team"]
 menuitem "Kick Player" [showmenu "kick player"]
 menuitem "Ban Player" [showmenu "ban player"]
 menuitem "Remove Bans" "removebans"
+menuitem "Give Master" [showmenu "give master"]
 
 
 newmenu mastermode
