*** empty log message ***
git-svn-id: http://svn.code.sf.net/p/actiongame/code/trunk@1083 e016b1c5-ed68-44aa-a2f7-31cac88cffde

--- a/ac/config/keymap.cfg
+++ b/ac/config/keymap.cfg
@@ -25,7 +25,7 @@ keymap 43 PLUS ""
 keymap 44 COMMA "equalize 0"
 keymap 45 MINUS ""
 keymap 46 PERIOD "equalize 2"
-keymap 47 SLASH ""
+keymap 47 SLASH "saycommand /"
 keymap 48 0 "weapon 0 1 2"
 keymap 49 1 "weapon 1 2 4"
 keymap 50 2 "weapon 2 1 4"
