--- a/ac/config/defaults.cfg
+++ b/ac/config/defaults.cfg
@@ -21,6 +21,8 @@ bind A left
 bind S backward
 bind D right
 
+bind B "showmenu weapons"
+
 alias primary [ weapon (currentprimary) ]
 alias secondary [ weapon 1 ]
 alias melee [ weapon 0 ]
@@ -137,3 +139,13 @@ bind KP_PLUS "conskip -1000"
 //bind lalt "melee"
 
 alias timeremain [ echo time remaining: ($minutesremaining) ]
+
+
+music ac.ogg
+
+alias start_intermission [
+    // play once (1:40) 
+    musicvol $maxmusicvol
+    fade 0
+    sleep 10000 [ fade 1 ]
+]
