--- a/ac/config/docs.cfg
+++ b/ac/config/docs.cfg
@@ -342,9 +342,10 @@ docremark [After changing this value, a "recalc" is needed to see the difference
 
 docident [map] [Loads up a map in the gamemode set previously by the 'mode' command.];
 docargument [M] [name of the map to load] [string] [0];
-docremark [TODO: multiplayer voting];
+docremark [If connected to a multiplayer server, votes to load this map (others will have to type "map M" as well to agree with loading this map). To vote for a map with a specific mode, set the mode before you issue the map command (see multiplayer menu).];
 docremark [A map given as "blah" refers to "packages/base/blah.cgz", "mypackage/blah" refers to "packages/mypackage/blah.cgz". At every map load, "config/default_map_settings.cfg" is loaded which sets up all texture definitions, etc. Everything defined in there can be overridden per package or per map by creating a "package.cfg" or "mapname.cfg" which contains whatever you want to do differently from the default.];
 docremark [When the map finishes it will load the next map when one is defined, otherwise reloads the current map. You can define what map follows a particular map by making an alias like (in the map script): alias nextmap_blah1 blah2 (loads "blah2" after "blah1").];
+docremark [TODO: multiplayer voting];
 
 docident [mastermode] [Sets the mastermode for the server.];
 docargument [N] [the master mode] [0 (open), 1 (private)] [0];
