--- a/ac/config/menus.cfg
+++ b/ac/config/menus.cfg
@@ -203,7 +203,7 @@ alias genbotmaps [
 	]
 ]
 
-genbotmaps "ac_complex ac_mines ac_depot ac_desert ac_desert2"
+genbotmaps "ac_complex ac_mines ac_depot ac_desert ac_desert2 ac_snow"
 
 newmenu "server operator"
 
@@ -234,6 +234,7 @@ menuitem "Entities"			        "showmenu entities"
 menuitem "Pickups"                              "showmenu pickups"
 menuitem "Arches and slopes.."                  "showmenu arches"
 menuitem "Map operations.."                     "showmenu mapop"
+menuitem "Bots"                     "showmenu botedit"
 menuitem "help..."                              "showmenu editkeys"
 
 
@@ -407,15 +408,6 @@ menuitem "Newmap 256x256 cubes"               "newmap 8"
 menuitem "Increase mapsize (2x)"              "mapenlarge"
 menuitem "Set map title/author"               "saycommand /mapmsg "
 
-bind B "showmenu weapons"
-
-//newmenu items 
-//menubg	 "textures/makke/menu.jpg"
-
-//menuitem "Primary Weapon"	"showmenu primary"
-//menuitem "Secondary Weapon"	"showmenu secondary"
-//menuitem "Equipment"	        "showmenu equipment"
-
 newmenu "weapons"
 
 menumdl weapons/assault/menu mapmodel 75 12
@@ -438,9 +430,12 @@ newmenu options
 
 menuitem "tweak minlod.. (higher = less popup, possibly lower fps)" "showmenu minlod"
 menuitem "tweak fpsrange.. (higher = possibly more popup)"          "showmenu fpsrange"
-menuitem "tweak water subdivision.."                                "showmenu watersubdiv"
-menuitem "turn dynamic light/shadows off"                           "dynlight 0"
-menuitem "tweak gamma.."                                            "showmenu gamma"
+menuitem "tweak water subdivision"                                  "showmenu watersubdiv"
+menuitem "tweak dynamic light/shadows"                              "showmenu dynlight"
+menuitem "tweak water reflection"                                   [showmenu "water reflection"]
+menuitem "tweak dynamic player shadows"                             [showmenu "player shadows"]
+menuitem "tweak gamma"                                              "showmenu gamma"
+
 
 newmenu gamma
 
@@ -479,6 +474,20 @@ menuitem "subdivision 4  (medium quality)"          "watersubdiv 4"
 menuitem "subdivision 8  (low quality)"             "watersubdiv 8"
 menuitem "subdivision 16 (my 486 can do water too)" "watersubdiv 16"
 
+newmenu dynlight
+
+menuitem "enable dynamic light/shadows"                           "dynlight 1"
+menuitem "disable dynamic light/shadows"                           "dynlight 0"
+
+newmenu "water reflection"
+
+menuitem "enable water reflection"                  "waterrefract 1"
+menuitem "disable water reflection"                 "waterrefract 0"
+
+newmenu "player shadows"
+
+menuitem "enable dynamic player shadows"    "dynshadows 1"
+menuitem "disable dynamic player shadows"    "dynshadows 0"
 
 newmenu about
 
@@ -500,6 +509,7 @@ menuitem "http://www.cubeengine.com/" "echo sorry no built-in web browser yet :)
 newmenu help
 
 menuitem "AssaultCube reference"	"showmenu reference"
+menuitem "search command"           "saycommand /docfind yourSearchString"
 menuitem "default keys"				"showmenu keys"
 menuitem "" ""
 menuitem "..for further information see the README"
@@ -507,34 +517,34 @@ menuitem "..for further information see the README"
 
 newmenu keys
 
-menuitem "r                        - reload Gun" ""
+menuitem "left mouse button      - attack" ""
 menuitem "right mouse button     - use scope" ""
+menuitem "R                        - reload Gun" ""
 menuitem "mousewheel up/down  - cycle weapons" ""
 menuitem ""
-menuitem "b                        - weapon menu" ""
+menuitem "B                        - weapon menu" ""
+menuitem "T                        - chat"
 
 
 newmenu credits
 
-menuitem "Arghvark    Project Leader" ""
-menuitem "              Concept, Coding" ""
+menuitem "Arghvark    Project Leader, Code" ""
 menuitem "driAn        Lead Coder" "" 
 menuitem "makkE       Lead Artist" ""
-menuitem "Verbal       QA, Advisor, Lead Tester" ""
 menuitem "              Maps, Models, Skins, Animation" ""
 menuitem "              Sound, some Textures, 2D-Art" ""
 menuitem "Nieb         Models, Hosting" ""
 menuitem "Mitaman     Maps,Ressources" ""
-menuitem "Rick         Bots, Win32-Compiling" ""
+menuitem "Verbal       QA, Advisor, Lead Tester" ""
+menuitem "Eihrul        Coder, Enet Library, Cube2 backporting"
 menuitem ""
 menuitem "Thanks to:" ""
-menuitem "Wouter van Oortmersson (Engine), DCP (Music)," ""
+menuitem "Aardappel (Engine), Rick (Bots), absinth (AC for Mac)" ""
 menuitem "JCDPC (Laptop Model, Company), dtd (Hosting), Boeck" ""
+menuitem "DCP (music), ac_stef (bug fixes)"
 menuitem "Ted Southard (DigitalFlux), Noctua Graphics, Arcitool,"
 menuitem "Craig Fortune, 3dcafe, Rohrschach, lemong.fr,"
 menuitem "Mayang.com, Chris Zastrow, imageafter.com (textures)"
-
-alias master [ showmenu master ]
 
 
 newmenu botedit
@@ -553,3 +563,8 @@ menuitem "delpath1way1"
 menuitem "delpath1way2" 
 menuitem "delpath2way1"
 menuitem "delpath2way2"
+menuitem "wpvisible 1"
+menuitem "wpflood"
+menuitem "wpclear"
+menuitem "wpsave"
+menuitem "xhairwpsel 1"
