--- a/ac/config/defaults.cfg
+++ b/ac/config/defaults.cfg
@@ -142,6 +142,7 @@ alias timeremain [ echo time remaining: ($minutesremaining) ]
 
 
 music ac.ogg
+musicvol 0
 
 alias start_intermission [
     // play once (1:40) 
