*** empty log message ***
git-svn-id: http://svn.code.sf.net/p/actiongame/code/trunk@1118 e016b1c5-ed68-44aa-a2f7-31cac88cffde

--- a/ac/config/menus.cfg
+++ b/ac/config/menus.cfg
@@ -486,8 +486,8 @@ menuitem "disable water reflection"                 "waterrefract 0"
 
 newmenu "player shadows"
 
-menuitem "enable dynamic player shadows"    "dynshadows 1"
-menuitem "disable dynamic player shadows"    "dynshadows 0"
+menuitem "enable dynamic player shadows"    "dynshadow 40"
+menuitem "disable dynamic player shadows"    "dynshadow 0"
 
 newmenu about
 
