--- a/ac/config/defaults.cfg
+++ b/ac/config/defaults.cfg
@@ -1,7 +1,7 @@
 // these default settings get executed whenever "saved.cfg" is not available
 // do not modify anything below, instead change settings in game, or add to autoexec.cfg
 
-name "unarmed"     // change!
+name "Player-0"     // change!
 
 loadcrosshair default.png	// choose another crosshair, see packages/misc/crosshairs/
 
