--- a/ac/config/menus.cfg
+++ b/ac/config/menus.cfg
@@ -102,9 +102,12 @@ gencrosshairs "default.png cube.png dot.png dot_wide.png o.png o_dot.png o_x.png
 newmenu multiplayer
 
 menuitem "Join Game"              	"showmenu server"
+menuitem "Join LAN Game"            "lanconnect"
 menuitem "Update Servers"         	"updatefrommaster;showmenu server"
 menuitem "Disconnect"             	"disconnect"
 menuitem "Vote"                   	"showmenu gamemode"
+menuitem "Chat"                     "saycommand"
+menuitem "Team Chat"                "saycommand %"
 menuitem "Server Operator"			"showmenu [server operator]"
 
 
