--- a/ac/config/docs.cfg
+++ b/ac/config/docs.cfg
@@ -165,6 +165,9 @@ docargument [N] [the weapon number] [0 (knife), 1 (pistol), 2 (shotgun), 3 (sub)
 
 docsection [General]
 
+docident [aadynshadow] [Sets the size/resolution of the dynamic shadow data.];
+docargument [] [the size] [min 0/max 3/default 2];
+
 docident [addserver] [Adds a server to the list of server to query in the server list menu.];
 docargument [S] [the name of the server (cn/ip)] [] [0];
 
@@ -210,6 +213,9 @@ docident [clearminimap] [Recreates the minimap for the current map.];
 
 docident [clearsecuremaps] [Clears the list of secured maps.];
 
+docident [colorbits] [Sets the bits per pixel value.];
+docargument [] [bits per pixel] [min 0/max 32/default 0];
+
 docident [connected] [Indicates if a connection to a server exists.];
 docargument [B] [the connection state] [1 (connected), 0 (disconnected) min 0/max 1/default 0];
 
@@ -225,6 +231,9 @@ docremark [When on, the crosshair will go grey when the weapon is reloading, ora
 docident [crosshairsize] [Sets the size of your crosshair.];
 docargument [N] [the crosshair size] [min 0/max 50/default 15];
 docremark [The crosshair is turned off entirely if the size is set to 0.];
+
+docident [depthbits] [Sets the bits for the depth buffer.];
+docargument [] [depth pixels] [min 0/max 32/default 0];
 
 docident [docargument] [Adds a new argument documentation to the last added identifier.];
 docargument [T] [the token] [] [0];
@@ -280,6 +289,12 @@ docident [dynlight] [Determines wether dynamic shadows and lights are rendered, 
 docargument [R] [the radius of a dynamic light] [min 0/max 32/default 16];
 docremark [With radius you can specify the radius of a dynamic light, smaller to maybe gain some speed (0 is off entirely), or bigger to see the effect of dynamic shadows more dramatically (try shooting it past some pillars that have a dark area on the other side... or use the "gamespeed" variable).];
 
+docident [dynshadow] [Sets the alpha value (transparency) for dynamic shadows.];
+docargument [] [the alpha value] [min 0/max 100/default 40];
+
+docident [dynshadowsize] [Sets the display size of the dynamic shadows.];
+docargument [] [the size] [min 4/max 8/default 5];
+
 docident [exec] [Executes all commands in a specified config file.];
 docargument [C] [the config file] [] [0];
 
@@ -300,6 +315,16 @@ docremark [default keys: W and Up Arrow];
 
 docident [fov] [Sets the field of view (fov).];
 docargument [N] [the fov value] [60..120] [0];
+
+docident [fsaa] [Sets the level of fullscreen antialiasing (FSAA).];
+docargument [] [fsaa] [min 0/max 16/default 0];
+
+docident [fullscreen] [Enables or disables fullscreen.];
+docargument [] [fullscreen] [min 0/max 1/default 1];
+docremark [Not supported on Windows and Mac.];
+
+docident [gamemode] [Holds the current game mode.];
+docargument [] [gamemode] [min 1/max 0/default 0];
 
 docident [gamma] [Sets the hardware gamma value.];
 docargument [N] [the gamma value] [min 30/max 300/default 100];
@@ -401,6 +426,9 @@ docremark [Requires master or admin state.];
 docident [right] [Moves the player right.];
 docremark [default keys: D and Right Arrow];
 
+docident [saveshadows] [Sets if dynamic shadows should be saved to disk.];
+docargument [] [auto save] [min 0/max 1/default 1];
+
 docident [screenshot] [Takes a screenshot.];
 docremark [Screenshots are saved to "screenshots/screenshotN.bmp", where N is the number of milliseconds since the game was launched.];
 dockey [F12] [] [];
@@ -433,8 +461,17 @@ docremark [Tweak this if you experience stuttering or lagging sound.];
 docident [soundvol] [Sets the sound volume.];
 docargument [N] [the volume] [min 0/max 255/default 155];
 
+docident [src_h] [Sets the screen height.];
+docargument [] [the screen height] [min 0/max 768/default 10000];
+
+docident [src_w] [Sets the screen width.];
+docargument [] [the screen width] [min 0/max 1024/default 10000];
+
 docident [updatefrommaster] [Contacts the masterserver and adds any new servers to the server list.];
 docremark [The servers are written to the config/servers.cfg file. This menu can be reached through the Multiplayer menu.];
+
+docident [vsync] [Enables or disables vsync.];
+docargument [] [vsync] [min -1/max 1/default -1];
 
 docident [watersubdiv] [Determines the subdivision of the water surface in maps.];
 docargument [N] [the subdivisioin value] [min 1/max 64/default 4];
