--- a/ac/config/menus.cfg
+++ b/ac/config/menus.cfg
@@ -36,11 +36,11 @@ alias genmapitems [
 
 newmenu maps
 
-genmapitems "ac_complex ac_mines ac_depot ac_desert ac_desert2 ac_snow"
+genmapitems "ac_complex ac_mines ac_depot ac_desert ac_desert2 ac_snow ac_power"
 
 newmenu maps_ctf 
 
-genmapitems "ac_mines ac_depot"
+genmapitems "ac_mines ac_depot ac_power"
 
 newmenu setup
 
