*** empty log message ***
git-svn-id: http://svn.code.sf.net/p/actiongame/code/trunk@1225 e016b1c5-ed68-44aa-a2f7-31cac88cffde

--- a/ac/config/menus.cfg
+++ b/ac/config/menus.cfg
@@ -500,7 +500,7 @@ menuitem "                     ...help"		"showmenu help"
 menuitem "                     ...credits"	"showmenu credits"
 menuitem ""
 menuitem "by 'Rabid Viper Productions'" "showmenu credits"
-menuitem "http://action.cubers.net" "echo sorry no built-in web browser yet :)"
+menuitem "http://assault.cubers.net" "echo sorry no built-in web browser yet :)"
 menuitem "a cube mod/tc based on the" ""
 menuitem ""
 menuitem "Cube game/engine" ""
