--- a/ac/packages/maps/ac_power.cfg
+++ b/ac/packages/maps/ac_power.cfg
@@ -79,7 +79,6 @@ mapmodel 0 0 0 0 "wires/2x8"       //58
 mapmodel 0 0 0 0 "wires/4x8a"      //59
 mapmodel 0 0 0 0 "wires/4x8"       //60
 
-
 // skybox for this map - check /packages/skymaps/
 
 //loadsky "textures/skymaps/steini/steini2"
@@ -117,7 +116,7 @@ texture 0 "./arcitool/archibrick04.jpg"
 texture 0 "./arcitool/archibrick05.jpg"
 texture 0 "./arcitool/archibrick06.jpg"
 texture 0 "./arcitool/archibrick07.jpg"
-texture 0 "./arcitool/rohbaubims.jpg"
+texture 0 "./arcitool/rohbaubims.jpg"	//10
 texture 0 "./mitaman/grsites/brick051.jpg"
 texture 0 "./mitaman/grsites/brick065.jpg"
 texture 0 "./boeck/stone_022.jpg"
@@ -127,7 +126,7 @@ texture 0 "./makke/bricks_2.jpg"
 texture 0 "./makke/bricks_3.jpg"
 texture 0 "./makke/brickwall.jpg"
 texture 0 "./noctua/wall/brick02.jpg"
-texture 0 "./sub/brick_wall_08.jpg"
+texture 0 "./sub/brick_wall_08.jpg"		//20
 texture 0 "./sub/brick_wall_09.jpg"
 texture 0 "./makke/bricky.jpg"
 texture 0 "./makke/01-CMU.jpg"
@@ -141,7 +140,7 @@ texture 0 "./mitaman/3dcafe/stone18.jpg"
 texture 0 "./noctua/tiles/16tile12.jpg"
 texture 0 "./noctua/tiles/16tile09.jpg"
 texture 0 "./noctua/tiles/16tile10.jpg"
-texture 0 "./noctua/tiles/16tile11.jpg"
+texture 0 "./noctua/tiles/16tile11.jpg"	//30
 texture 0 "./noctua/tiles/16tile07.jpg"
 texture 0 "./arcitool/Cotta1-grau.jpg"
 texture 0 "./arcitool/Cotta1-graubraun.jpg"
@@ -151,7 +150,7 @@ texture 0 "./arcitool/Cotta2-beige.jpg"
 texture 0 "./arcitool/Cotta2-dunkel.jpg"
 texture 0 "./arcitool/Cotta2-grau.jpg"
 texture 0 "./arcitool/Cotta2-satt.jpg"
-texture 0 "./makke/tiles.jpg"
+texture 0 "./makke/tiles.jpg"			//40
 
 //------floorings----------------
 
@@ -164,7 +163,7 @@ texture 0 "./makke/br_tiles.jpg"
 texture 0 "./makke/c_tile.jpg"
 texture 0 "./makke/pebbles_01.jpg"
 texture 0 "./arcitool/sisal21.jpg"
-texture 0 "./makke/platten.jpg"
+texture 0 "./makke/platten.jpg"		//50
 
 //------asphalt/concrete------------------------
 
@@ -176,7 +175,7 @@ texture 0 "./DigitalFlux/dirty_asphalt_02.jpg"
 texture 0 "./DigitalFlux/dirty_asphalt_03.jpg"
 texture 0 "./makke/concrete.jpg"
 texture 0 "./makke/concrete_trim.jpg"
-texture 0 "./makke/concrete_trim_small.jpg"
+texture 0 "./makke/concrete_trim_small.jpg"	//60
 texture 0 "./noctua/ground/snowy03.jpg"
 texture 0 "./noctua/ground/snowy04.jpg"
 texture 0 "./noctua/ground/snowy05.jpg"
@@ -186,7 +185,7 @@ texture 0 "./noctua/metal/iron01.jpg"
 texture 0 "./noctua/metal/zinc02.jpg"
 texture 0 "./noctua/metal/zinc03.jpg"
 texture 0 "./noctua/wall/plast02.jpg"
-texture 0 "./noctua/wall/conc01.jpg"
+texture 0 "./noctua/wall/conc01.jpg"		//70
 texture 0 "./noctua/wall/conc02.jpg"
 texture 0 "./noctua/wall/conc05.jpg"
 texture 0 "./noctua/wall/wall02.jpg"
@@ -199,7 +198,7 @@ texture 0 "./noctua/ground/snowy02.jpg"
 texture 0 "./boeck/stone_013.jpg"
 texture 0 "./boeck/stone_014.jpg"
 texture 0 "./noctua/wall/plast01.jpg"
-texture 0 "./noctua/wall/plast03.jpg"
+texture 0 "./noctua/wall/plast03.jpg"	//80
 texture 0 "./noctua/wall/plast04.jpg"
 texture 0 "./mitaman/various/5sqtunnelroad.jpg"
 texture 0 "./mitaman/various/027metal.jpg"
@@ -328,16 +327,36 @@ texture 0 "./makke/box_3.jpg"           //241
 
 //wotwots urban textures
 
-texture 0 "wotwot/urban/concrete1.jpg" 
-texture 0 "wotwot/urban/concrete1.jpg" 
-texture 0 "wotwot/urban/door3.jpg"  
-texture 0 "wotwot/urban/door3.jpg"  
-texture 0 "wotwot/urban/door3.jpg"  
+texture 0 "wotwot/urban/electric2.jpg"  
+texture 0 "wotwot/urban/electric2_plain.jpg"
+texture 0 "wotwot/urban/asphalt1_l.jpg"  
+texture 0 "wotwot/urban/metaltrim1_ver.jpg"  
+texture 0 "wotwot/urban/metaltrim1_hor.jpg"
 texture 0 "wotwot/urban/door3.jpg"  
 texture 0 "wotwot/urban/airvent1.jpg"  
+texture 0 "wotwot/urban/ventilation1.jpg"
 texture 0 "wotwot/urban/grill2_s.jpg" 
-texture 0 "wotwot/urban/grill2_s.jpg" 
-texture 0 "wotwot/urban/grill2_s.jpg" 
-texture 0 "wotwot/urban/hatch1.jpg" 
+texture 0 "wotwot/urban/cableshelf1_s_hor.jpg" 
+texture 0 "wotwot/urban/cableshelf1_m_hor.jpg" 
 texture 0 "wotwot/urban/hatch1.jpg" 
 texture 0 "wotwot/urban/manhole1.jpg"  
+
+
+//some textures made by makkE
+
+texture 0 "makke/door_rust.jpg"
+texture 0 "makke/door_metal.jpg"
+
+
+//more wotwots textures
+
+texture 0 "wotwot/urban/cableshelf1_l_hor.jpg" 
+texture 0 "wotwot/urban/cableshelf1_s_ver.jpg" 
+texture 0 "wotwot/urban/cableshelf1_m_ver.jpg" 
+texture 0 "wotwot/urban/cableshelf1_l_ver.jpg" 
+texture 0 "wotwot/urban/electric4.jpg"  
+texture 0 "wotwot/urban/electric4_plain.jpg"
+texture 0 "wotwot/urban/electric3.jpg"  
+texture 0 "wotwot/urban/electric3_plain.jpg"
+texture 0 "wotwot/urban/electric1.jpg"  
+texture 0 "wotwot/urban/electric1_plain.jpg"
