--- a/ac/config/docs.cfg
+++ b/ac/config/docs.cfg
@@ -467,6 +467,10 @@ docargument [] [the screen height] [min 0/max 768/default 10000];
 docident [src_w] [Sets the screen width.];
 docargument [] [the screen width] [min 0/max 1024/default 10000];
 
+docident [teamdisplaymode] [Sets the team display mode.];
+docargument [N] [the team display mode] [0 (none), 1 (color vests), 2 (color skins) min 0/max 2/default 1];
+docremark [In mode 1 players will be rendered with a colored vest to make the teams distinguishable. In mode 2 almost the whole suit of the players will be colored. These display modes are only applied in team gamemodes.];
+
 docident [updatefrommaster] [Contacts the masterserver and adds any new servers to the server list.];
 docremark [The servers are written to the config/servers.cfg file. This menu can be reached through the Multiplayer menu.];
 
