--- a/ac/config/keymap.cfg
+++ b/ac/config/keymap.cfg
@@ -102,8 +102,8 @@ keymap 278 HOME "edittex 1 1"
 keymap 279 END "edittex 1 -1"
 keymap 280 PAGEUP "edittex 2 1"
 keymap 281 PAGEDOWN "edittex 2 -1"
-keymap 282 F1 ""
-keymap 283 F2 ""
+keymap 282 F1 "vote 1"
+keymap 283 F2 "vote 0"
 keymap 284 F3 ""
 keymap 285 F4 ""
 keymap 286 F5 ""
