*** empty log message ***
git-svn-id: http://svn.code.sf.net/p/actiongame/code/trunk@1317 e016b1c5-ed68-44aa-a2f7-31cac88cffde

--- a/ac/config/defaults.cfg
+++ b/ac/config/defaults.cfg
@@ -84,19 +84,19 @@ bind MOUSE2 [ altaction ]
 //alias ztoggle 0
 //bind MOUSE2 [ alias ztoggle (= ztoggle 0); zoom $ztoggle ]
 
-alias vote [ mode $arg1; map $arg2 ]
+alias votemap [ mode $arg1; map $arg2 ]
 
-alias tdm   [ vote 0 $arg1 ]
-alias ts    [ vote 4 $arg1 ]
-alias ctf   [ vote 5 $arg1 ]
-alias dm    [ vote 2 $arg1 ]
-alias ffa   [ vote 2 $arg1 ]
-alias lms   [ vote 3 $arg1 ]
-alias pf    [ vote 6 $arg1 ]
-alias lss   [ vote 9 $arg1 ]
-alias insta [ vote 10 $arg1 ]
-alias osok  [ vote 10 $arg1 ]
-alias tosok [ vote 11 $arg1 ]
+alias tdm   [ votemap 0 $arg1 ]
+alias ts    [ votemap 4 $arg1 ]
+alias ctf   [ votemap 5 $arg1 ]
+alias dm    [ votemap 2 $arg1 ]
+alias ffa   [ votemap 2 $arg1 ]
+alias lms   [ votemap 3 $arg1 ]
+alias pf    [ votemap 6 $arg1 ]
+alias lss   [ votemap 9 $arg1 ]
+alias insta [ votemap 10 $arg1 ]
+alias osok  [ votemap 10 $arg1 ]
+alias tosok [ votemap 11 $arg1 ]
 
 //--------------------- editing -------------------------------
 
