--- a/ac/config/admin.cfg
+++ b/ac/config/admin.cfg
@@ -5,3 +5,4 @@ alias mastermode [ callvote 3 $arg1 ]
 alias autoteam [ callvote 4 $arg1 ]
 alias forceteam [ callvote 5 $arg1 ]
 alias givemaster [ callvote 6 $arg1 ]
+alias map [ callvote 7 $arg1 $arg2 ]
