--- a/ac/config/sounds.cfg
+++ b/ac/config/sounds.cfg
@@ -41,6 +41,10 @@ registersound "weapon/pistol_akreload" // S_RAKIMBO
 registersound "misc/change_gun"		// S_GUNCHANGE
 registersound "player/gib"			// S_GIB
 registersound "misc/headshot"		// S_HEADSHOT
+registersound "misc/vote/vote_call" // S_CALLVOTE
+registersound "misc/vote/vote_pass" // S_VOTEPASS
+registersound "misc/vote/vote_fail" // S_VOTEFAIL
+registersound "misc/test"
 
 alias fade [ // 0=in, 1=out
     alias stepsize 5
